<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/moveactivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/pindah_activity"/>
    <Button
        android:id="@+id/movedata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/moveactivity"
        android:text="@string/pindah_data"/>
    <Button
        android:id="@+id/moveobject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/movedata"
        android:text="@string/pindah_object"/>
    <Button
        android:id="@+id/dialbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/moveobject"
        android:text="@string/dial_button"/>
    <Button
        android:id="@+id/moveresult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/dialbutton"
        android:text="@string/move_result"
        android:layout_marginBottom="50dp"/>
    <TextView
        android:id="@+id/hasilresult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/moveresult"
        android:textSize="30sp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/umur_ojans"
        />



</RelativeLayout>